--- a/Courses/ECON_8080_Spring_2023/05_panel_data_causal_inference.html
+++ b/Courses/ECON_8080_Spring_2023/05_panel_data_causal_inference.html
@@ -11,7 +11,7 @@
 
 
 
-<title>ECON 8080 Course Material</title>
+<title>Topic 5: Panel Data</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -354,79 +354,34 @@ pre code {
 
 
 
-<h1 class="title toc-ignore">ECON 8080 Course Material</h1>
+<h1 class="title toc-ignore">Topic 5: Panel Data</h1>
 
 </div>
 
 
+<div id="material-covered-in-class" class="section level1">
+<h1>Material covered in class</h1>
 <ul>
-<li><a href="syllabus.pdf">Syllabus</a></li>
-</ul>
-<div id="homeworks" class="section level1">
-<h1>Homeworks</h1>
-<p><a href="hw1.html">HW 1</a>, due Tuesday, Jan. 31, [[<a href="hw1_sol.pdf">solutions</a>]]</p>
-<p><a href="hw2.html">HW 2</a>, due Thursday, Feb. 9, [[<a href="hw2_sol.pdf">solutions</a>]]</p>
+<li><p>Some of the topics covered in this section are from Chapters 17
+and 18 in the textbook, but other parts are not in the
+textbook.</p></li>
+<li><p>The material not from the textbook primarily comes from</p>
 <ul>
-<li><a href="cps09mar.dta">cps09mar.dta</a></li>
-</ul>
-<p><a href="hw3.html">HW 3</a>, due Thursday, Mar. 2, [[<a href="hw3_sol.pdf">solutions</a>]]</p>
-<p><a href="hw4.html">HW 4</a>, due Thursday, Mar. 23, [[<a href="hw4_sol.pdf">solutions</a>]]</p>
-<p><a href="hw5.html">HW 5</a>, due Tuesday, Apr. 18</p>
-</div>
-<div id="additional-material-for-midterm-1" class="section level1">
-<h1>Additional Material for Midterm 1</h1>
-<ul>
-<li><p>Midterm 1 covers the course lecture notes 1-4 / the first 4
-chapters of Hansen.</p></li>
-<li><p><a href="additional_practice1.html">Additional Practice Questions
-for Midterm 1</a>, these do not need to be turned in, [[<a href="additional_practice1_sol.pdf">solutions</a>]]</p></li>
+<li>Callaway, Brantly. “Difference-in-Differences for Policy
+Evaluation,” <em>Handbook of Labor, Human Resources, and Population
+Economics</em>, pp.1–61, 2023. [<a href="https://bcallaway11.github.io/files/Callaway-Chapter-2022/main.pdf">Link</a>]</li>
+</ul></li>
+<li><p><a href="05_panel_data_causal_inference_notes.pdf">Notes</a></p></li>
 </ul>
 </div>
-<div id="additional-material-for-midterm-2" class="section level1">
-<h1>Additional Material for Midterm 2</h1>
+<div id="additional-material" class="section level1">
+<h1>Additional material</h1>
 <ul>
-<li><p>Midterm 2 covers the course lecture notes from Lecture Notes 5
-(Asymptotic Theory for Least Squares), Resampling Methods, Nonlinear
-Models, and the first part of Alternative Approaches to Causal Inference
-(up to the section called “Alternative Approaches” on p.9)</p></li>
-<li><p><a href="additional_practice2.html">Additional Practice Questions
-for Midterm 2</a>, these questions do not need to be turned in, [[<a href="additional_practice2_sol.pdf">solutions</a>]]</p></li>
-</ul>
-</div>
-<div id="course-material" class="section level1">
-<h1>Course Material</h1>
-<p>We will cover the following topics:</p>
-<p>(<span style="color: red; font-weight: bold;">Note:</span> Some of
-the material will be updated/expanded as we move through the semester.
-Some of the topics at the end of the semester are tentative.)</p>
-<ol start="0" style="list-style-type: decimal">
-<li><p><a href="introduction_to_R.html">Introduction to R</a></p></li>
-<li><p><a href="01_linear_regression.html">Linear
-Regression</a></p></li>
-</ol>
-<!--2. [Inference/Hypothesis Testing](02_hypothesis_testing.html)-->
-<ol start="2" style="list-style-type: decimal">
-<li><p><a href="02_resampling_methods.html">Resampling
-Methods</a></p></li>
-<li><p><a href="03_nonlinear_models.html">Introduction to Nonlinear
-Models</a></p></li>
-<li><p><a href="04_alternative_causal_inference.html">Alternative
-Approaches to Causal Inference</a></p></li>
-<li><p><a href="05_panel_data_causal_inference.html">Panel Data
-Approaches to Causal Inference</a></p></li>
-<li><p>If we have time, an introduction to [Generalized Method of
-Moments]</p></li>
-<li><p>If we have time, an introduction to [Quantile
-Regression]</p></li>
-<li><p>If we have time, an introduction to [Nonparametric
-Regression]</p></li>
-</ol>
-</div>
-<div id="slides" class="section level1">
-<h1>Slides</h1>
-<ul>
-<li>First Week: <a href="introduction_slides.html">Introduction to ECON
-8080</a></li>
+<li>This section discusses (i) traditional panel data estimation
+strategies, (ii) their usefulness in the context of causal effects,
+(iii) and alternative approaches to using panel data to learn about
+causal effects that are more robust to treatment effect
+heterogeneity.</li>
 </ul>
 </div>
 
