--- a/Courses/ECON_8080_Spring_2023/index.html
+++ b/Courses/ECON_8080_Spring_2023/index.html
@@ -372,8 +372,7 @@ pre code {
 <p><a href="hw3.html">HW 3</a>, due Thursday, Mar. 2, [[<a href="hw3_sol.pdf">solutions</a>]]</p>
 <p><a href="hw4.html">HW 4</a>, due Thursday, Mar. 23, [[<a href="hw4_sol.pdf">solutions</a>]]</p>
 <p><a href="hw5.html">HW 5</a>, due Tuesday, Apr. 18, [[<a href="hw5_sol.pdf">solutions</a>]]</p>
-<p><a href="hw6.html">HW 6</a>, due at 9am on Tuesday, May 2, please
-bring to my office, Amos B408</p>
+<p><a href="hw6.html">HW 6</a>, due at 9am on Tuesday, May 2, [[<a href="hw6_sol.pdf">solutions</a>]]</p>
 </div>
 <div id="additional-material-for-midterm-1" class="section level1">
 <h1>Additional Material for Midterm 1</h1>
