update next-d slides

--- a/files/presentations/NEXT-D/index.html
+++ b/files/presentations/NEXT-D/index.html
@@ -360,6 +360,14 @@ Difference-in-Differences</h1>
 </div>
 
 
+<div id="main-reference" class="section level1">
+<h1>Main Reference</h1>
+<p>Callaway (2023, <em>Handbook of Labor, Human Resources and Population
+Economics</em>), [[<a href="https://link.springer.com/referenceworkentry/10.1007/978-3-319-57365-6_352-1">published
+version</a>]]   [[<a href="https://bcallaway11.github.io/files/Callaway-Chapter-2022/main.pdf">draft
+version</a>]]; the draft version is ungated and very similar to the
+published version.</p>
+</div>
 <div id="data" class="section level1">
 <h1>Data</h1>
 <p><a href="mw_data_ch2.RData">Minimum Wage Example</a></p>
